AC_INIT(VulcanoVG, 0.2.1)
AC_CONFIG_HEADERS([config.h:config.h.in])
AM_INIT_AUTOMAKE([gnu subdir-objects])
AC_CANONICAL_HOST

AC_PROG_CC_C99
AC_PROG_LIBTOOL

# ==============================================
# Check examples selection

AC_ARG_WITH(
	[example-all],
	[  --with-example-all            Initialize build values for all examples (default=yes)],
	[build_test_all=$withval], [build_test_all="yes"])

AC_ARG_WITH(
	[example-egl],
	[  --with-example-vgu            Build EGL example (default=yes)],
	[build_test_egl=$withval], [build_test_egl="$build_test_all"])

# ==============================================
# Integer types

AC_TYPE_INT8_T
AC_TYPE_UINT8_T
AC_TYPE_INT16_T
AC_TYPE_UINT16_T
AC_TYPE_INT32_T
AC_TYPE_UINT32_T
AC_TYPE_INT64_T
AC_TYPE_UINT64_T
AC_CHECK_SIZEOF([void *])

# ==============================================
# Check for math library

AC_CHECK_LIB([m],[cos])

# ==============================================
# Platform-specific directories and flags

VULKAN_DIR="vulkan"
CONFIG_CFLAGS=""
CONFIG_LDFLAGS=""
CONFIG_LDADD=""

AC_SUBST([CONFIG_CFLAGS])
AC_SUBST([CONFIG_LDFLAGS])
AC_SUBST([CONFIG_LDADD])

# ==============================================
# Check for Vulkan headers
AC_CHECK_HEADERS(
	[$VULKAN_DIR/vulkan.h],
	[has_vulkan_h="yes"], [has_vulkan_h="no"])

# ===============================================
# Check for Vulkan libraries

echo -n "checking for Vulkan library... "
AC_LINK_IFELSE([
	char vkCreateInstance();
	int main(void) {vkCreateInstance(); return 0;}],
	[has_vulkan="yes"] && [echo "yes"],
	[has_vulkan="no"] && [echo "no"])

# ==============================================
# report failure on missing libraries

NO_VULKAN_H_MSG="

	vulkan.h header missing! VulcanVG cannot be built without
	Vulkan headers.
"

NO_VULKAN_MSG="

	Failed linking with Vulkan library! VulcanVG cannot be built
	without Vulkan library.
"

if test "x$has_vulkan_h" = "xno"; then
	AC_MSG_FAILURE([$NO_VULKAN_H_MSG])
fi

if test "x$has_vulkan" = "xno"; then
	AC_MSG_FAILURE([$NO_VULKAN_MSG])
fi

# ========================================================
# Setup automake conditionals according to configuration

AM_CONDITIONAL([BUILD_EXAMPLES],    [test "x$build_test_egl" = "xyes"])
AM_CONDITIONAL([BUILD_EGL],         [test "x$build_test_egl" = "xyes"])

AC_OUTPUT([
Makefile
src/Makefile
examples/Makefile
])

# =============================================

#echo "VULKAN headers present  $has_vulkan_h"
#echo ""
#echo "Vulkan library present  $has_vulkan"

EXAMPLES_LIST="
VulcanVG will be compiled with the following example programs
(run './configure --help' to see how to change selection) :

  EGL                       ${build_test_egl}
"

echo "$EXAMPLES_LIST"
echo ""
